efs/ecsworkshop/cdk.out/efs-fargate-demo.template.json
{
  "Resources": {
    "FrontendIngressE0C42D30": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Frontend Ingress All port 80",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow from anyone on port 80",
            "FromPort": 80,
            "IpProtocol": "tcp",
            "ToPort": 80
          }
        ],
        "VpcId": "vpc-0cad99f4a01936d39"
      },
      "Metadata": {
        "aws:cdk:path": "ecsworkshop-efs-fargate-demo/FrontendIngress/Resource"
      }
    },
    "ALBAEE750D2": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties": {
        "Scheme": "internet-facing",
        "SecurityGroups": [
          {
            "Fn::GetAtt": [
              "FrontendIngressE0C42D30",
              "GroupId"
            ]
          }
        ],
        "Subnets": [
          "subnet-03689657e2849a8fc",
          "subnet-051f9ae27f68f8f74"
        ],
        "Type": "application"
      },
      "Metadata": {
        "aws:cdk:path": "ecsworkshop-efs-fargate-demo/ALB/Resource"
      }
    },
    "ALBFrontendListenerD31C403C": {
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
      "Properties": {
        "DefaultActions": [
          {
            "TargetGroupArn": {
              "Ref": "ALBTG3A6B6730"
            },
            "Type": "forward"
          }
        ],
        "LoadBalancerArn": {
          "Ref": "ALBAEE750D2"
        },
        "Port": 80,
        "Protocol": "HTTP"
      },
      "Metadata": {
        "aws:cdk:path": "ecsworkshop-efs-fargate-demo/ALB/FrontendListener/Resource"
      }
    },
    "ALBTG3A6B6730": {
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
      "Properties": {
        "Name": "ECSDemoFargateEFS",
        "Port": 8000,
        "Protocol": "HTTP",
        "TargetType": "ip",
        "VpcId": "vpc-0cad99f4a01936d39"
      },
      "Metadata": {
        "aws:cdk:path": "ecsworkshop-efs-fargate-demo/ALBTG/Resource"
      }
    },
    "EFSSecGrp88EB04A2": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow access to self on NFS Port",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "VpcId": "vpc-0cad99f4a01936d39"
      },
      "Metadata": {
        "aws:cdk:path": "ecsworkshop-efs-fargate-demo/EFSSecGrp/Resource"
      }
    },
    "EFSSecGrpfromecsworkshopefsfargatedemoEFSSecGrpE158E105Self46DA38E3": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "Description": "from ecsworkshopefsfargatedemoEFSSecGrpE158E105:Self",
        "FromPort": 2049,
        "GroupId": {
          "Fn::GetAtt": [
            "EFSSecGrp88EB04A2",
            "GroupId"
          ]
        },
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "EFSSecGrp88EB04A2",
            "GroupId"
          ]
        },
        "ToPort": 2049
      },
      "Metadata": {
        "aws:cdk:path": "ecsworkshop-efs-fargate-demo/EFSSecGrp/from ecsworkshopefsfargatedemoEFSSecGrpE158E105:Self"
      }
    },
    "EFSSecGrpfromecsworkshopefsfargatedemoFrontendIngressA2A9E28CLB2Service5742CF64": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "Description": "from ecsworkshopefsfargatedemoFrontendIngressA2A9E28C:LB2Service",
        "FromPort": 8000,
        "GroupId": {
          "Fn::GetAtt": [
            "EFSSecGrp88EB04A2",
            "GroupId"
          ]
        },
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "FrontendIngressE0C42D30",
            "GroupId"
          ]
        },
        "ToPort": 8000
      },
      "Metadata": {
        "aws:cdk:path": "ecsworkshop-efs-fargate-demo/EFSSecGrp/from ecsworkshopefsfargatedemoFrontendIngressA2A9E28C:LB2Service"
      }
    },
    "SharedFSFEA07D92": {
      "Type": "AWS::EFS::FileSystem",
      "Properties": {
        "FileSystemTags": [
          {
            "Key": "Name",
            "Value": "ecsworkshop-efs-fargate-demo/SharedFS"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ecsworkshop-efs-fargate-demo/SharedFS/Resource"
      }
    },
    "SharedFSEfsMountTarget1B303F353": {
      "Type": "AWS::EFS::MountTarget",
      "Properties": {
        "FileSystemId": {
          "Ref": "SharedFSFEA07D92"
        },
        "SecurityGroups": [
          {
            "Fn::GetAtt": [
              "EFSSecGrp88EB04A2",
              "GroupId"
            ]
          }
        ],
        "SubnetId": "subnet-06edaab92837bf818"
      },
      "Metadata": {
        "aws:cdk:path": "ecsworkshop-efs-fargate-demo/SharedFS/EfsMountTarget1"
      }
    },
    "SharedFSEfsMountTarget23C1F7D8F": {
      "Type": "AWS::EFS::MountTarget",
      "Properties": {
        "FileSystemId": {
          "Ref": "SharedFSFEA07D92"
        },
        "SecurityGroups": [
          {
            "Fn::GetAtt": [
              "EFSSecGrp88EB04A2",
              "GroupId"
            ]
          }
        ],
        "SubnetId": "subnet-01e13cf6b1ec8718c"
      },
      "Metadata": {
        "aws:cdk:path": "ecsworkshop-efs-fargate-demo/SharedFS/EfsMountTarget2"
      }
    },
    "TaskExecutionRole250D2532": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "Description": "Task execution role for ecs services",
        "ManagedPolicyArns": [
          "arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ecsworkshop-efs-fargate-demo/TaskExecutionRole/Resource"
      }
    },
    "ECSEFSDemoLogGrp0DC4BB87": {
      "Type": "AWS::Logs::LogGroup",
      "Properties": {
        "RetentionInDays": 731
      },
      "UpdateReplacePolicy": "Retain",
      "DeletionPolicy": "Retain",
      "Metadata": {
        "aws:cdk:path": "ecsworkshop-efs-fargate-demo/ECSEFSDemoLogGrp/Resource"
      }
    }
  },
  "Outputs": {
    "ExecutionRoleARN": {
      "Value": {
        "Fn::GetAtt": [
          "TaskExecutionRole250D2532",
          "Arn"
        ]
      },
      "Export": {
        "Name": "ECSFargateEFSDemoTaskExecutionRoleARN"
      }
    },
    "EFSID": {
      "Value": {
        "Ref": "SharedFSFEA07D92"
      },
      "Export": {
        "Name": "ECSFargateEFSDemoFSID"
      }
    },
    "LBName": {
      "Value": {
        "Fn::GetAtt": [
          "ALBAEE750D2",
          "LoadBalancerName"
        ]
      },
      "Export": {
        "Name": "ECSFargateEFSDemoLBName"
      }
    },
    "TargetGroupArn": {
      "Value": {
        "Ref": "ALBTG3A6B6730"
      },
      "Export": {
        "Name": "ECSFargateEFSDemoTGARN"
      }
    },
    "VPCPrivateSubnets": {
      "Value": "subnet-06edaab92837bf818,subnet-01e13cf6b1ec8718c",
      "Export": {
        "Name": "ECSFargateEFSDemoPrivSubnets"
      }
    },
    "SecurityGroups": {
      "Value": {
        "Fn::Join": [
          "",
          [
            {
              "Fn::GetAtt": [
                "FrontendIngressE0C42D30",
                "GroupId"
              ]
            },
            ",",
            {
              "Fn::GetAtt": [
                "EFSSecGrp88EB04A2",
                "GroupId"
              ]
            }
          ]
        ]
      },
      "Export": {
        "Name": "ECSFargateEFSDemoSecGrps"
      }
    },
    "LBURL": {
      "Value": {
        "Fn::GetAtt": [
          "ALBAEE750D2",
          "DNSName"
        ]
      },
      "Export": {
        "Name": "ECSFargateEFSDemoLBURL"
      }
    },
    "LogGroupName": {
      "Value": {
        "Ref": "ECSEFSDemoLogGrp0DC4BB87"
      },
      "Export": {
        "Name": "ECSFargateEFSDemoLogGroupName"
      }
    }
  }
}
